# open_noisenet

./: .env.coolify  .env.example  .env.production  .gitignore  .mcp.json  404.html  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  FUNDING.md  Feature-Old-Smartphone.md  ImplementationPlan.md  LICENSE  README.md  deploy-coolify.sh  docker-compose.coolify.yml  docker-compose.landing.yml  docker-compose.prod.yml  docker-compose.yml  index.html  index.txt  nixpacks.toml  package.json  prd.md  technology.md  terraform-example.tf
.github/workflows/: deploy-landing.yml
_next/static/M2qK-C6EumXhHiGMLUGUF/: _buildManifest.js
_next/static/chunks/: 182-3beaa2624521ef25.js  196-4b9559d08a57814a.js  6a7534ba-b28e0974c1e90541.js  986-9f912b177ee583f0.js  main-0c05ccbb1d5de450.js  main-app-eabe5f4002afe372.js  webpack-9bdba2eb8192d8d6.js
_next/static/chunks/app/: layout-e390ee7c2293d35e.js  page-1d15775b3c45220c.js
_next/static/chunks/app/_not-found/: page-c345b88b86e52940.js
_next/static/chunks/app/story/: page-9e8d5c2fc2870849.js
_next/static/chunks/app/technology/: page-482630c57ee5c5bb.js
_next/static/chunks/app/terms/: page-bb2f70229aaa65b5.js
_next/static/chunks/pages/: _app-18f594518e2391b9.js  _error-520738dc64331fa0.js
_next/static/css/: f4f256c7be120dab.css
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  auth.py  devices.py  events.py  map.py  snippets.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_09_05_1058-20265cdcb4f1_initial_migration.py
frontend/: .dockerignore  .gitignore  Dockerfile  LANDING_PAGE.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AdminPage.tsx  DevicesPage.tsx  HomePage.tsx  MapPage.tsx  NotFoundPage.tsx
imprint/: index.html  index.txt
infrastructure/: .gitignore
infrastructure/monitoring/: prometheus.yml
infrastructure/nginx/: coolify.conf  nginx.conf  production.conf
infrastructure/postgres/: init.sql
landing/: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
landing/src/app/: globals.css  layout.tsx  page.tsx
landing/src/app/cookie-preferences/: page.tsx
landing/src/app/imprint/: page.tsx
landing/src/app/privacy/: page.tsx
landing/src/app/story/: page.tsx
landing/src/app/technology/: page.tsx
landing/src/app/terms/: page.tsx
landing/src/components/: analytics.tsx  cookie-consent-banner.tsx  noise-visualization.tsx
landing/src/components/ui/: button.tsx  input.tsx
landing/src/lib/: asset-path.ts  cookies.ts
mobile/: .gitignore  README.md  ROADMAP.md  analysis_options.yaml  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/: Podfile
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/config/: app_config.dart
mobile/lib/core/database/: database_helper.dart
mobile/lib/core/database/dao/: ai_analysis_queue_dao.dart  audio_recording_dao.dart  daily_statistics_dao.dart  hourly_statistics_dao.dart  noise_measurement_dao.dart  preferences_dao.dart
mobile/lib/core/database/models/: ai_analysis_queue.dart  audio_recording.dart  daily_statistics.dart  hourly_statistics.dart  noise_measurement.dart  preference.dart
mobile/lib/core/di/: injection.dart
mobile/lib/core/logging/: app_logger.dart
mobile/lib/core/router/: app_router.dart
mobile/lib/core/theme/: app_theme.dart
mobile/lib/services/: audio_capture_service.dart  audio_recording_service.dart  background_monitoring_service.dart  continuous_recording_service.dart  data_cleanup_service.dart  event_detection_service.dart  event_submission_service.dart  location_service.dart  noise_event_detector.dart  permission_dialog_service.dart  preferences_migration_service.dart  recording_service.dart  settings_service.dart  sqlite_preferences_service.dart  statistics_aggregation_service.dart  statistics_service.dart
mobile/lib/widgets/: audio_player_widget.dart  audio_waveform_widget.dart  persistent_audio_waveform_wrapper.dart  statistics_modal.dart
mobile/macos/: Podfile
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner/: Info.plist
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
privacy/: index.html  index.txt
scripts/: deploy.sh  migrate.sh  setup.sh
story/: index.html  index.txt
technology/: index.html  index.txt
terms/: index.html  index.txt
(+25 files in other folders)
